Finalized documentation for TestFloat Release 3.

--- a/README.html
+++ b/README.html
@@ -11,14 +11,14 @@
 
 <P>
 John R. Hauser<BR>
-2014 ________<BR>
+2014 Dec 17<BR>
 </P>
 
 <P>
-Berkeley TestFloat is ___.
-***
+Berkeley TestFloat is a small collection of programs for testing that an
+implementation of binary floating-point conforms to the IEEE Standard for
+Floating-Point Arithmetic.
 TestFloat is distributed in the form of C source code.
-Building the TestFloat sources creates ___.
 </P>
 
 <P>
